[package]
name = "shikane"
version = "0.1.0"
edition = "2021"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
license = "MIT"

[dependencies]
calloop = "0.10.4"
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.10.0"
hopcroft-karp = "0.2.1"
log = "0.4.17"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.37"
toml = { version = "0.5.9", features = ["preserve_order"] }
wayland-client = { version = "=0.30.0", features = ["log", "calloop"] }
wayland-protocols-wlr = { version = "=0.1.0", features = ["client"] }
xdg = "2.4.1"
