[package]
name = "shikane"
version = "0.2.0"
edition = "2021"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
repository = "https://gitlab.com/w0lff/shikane"
description = "Dynamic output configuration tool for Wayland compositors"
license = "MIT"
readme = "README.md"
rust-version = "1.60"
categories = ["command-line-utilities"]
keywords = ["wayland", "wlroots", "sway"]

[dependencies]
calloop = "0.10.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.0"
hopcroft-karp = "0.2.1"
log = "0.4.17"
regex = "1.7.0"
ron = "0.8.0"
serde = { version = "1.0.150", features = ["derive"] }
snafu = "0.7.4"
thiserror = "1.0.37"
toml = { version = "0.5.9", features = ["preserve_order"] }
wayland-client = { version = "=0.30.0", features = ["log", "calloop"] }
wayland-protocols-wlr = { version = "=0.1.0", features = ["client"] }
xdg = "2.4.1"
