[package]
name = "shikane"
version = "0.2.0"
edition = "2021"
authors = ["Hendrik Wolff <hendrik.wolff@agdsn.me>"]
repository = "https://gitlab.com/w0lff/shikane"
description = "Dynamic output configuration tool for Wayland compositors"
license = "MIT"
readme = "README.md"
rust-version = "1.70"
categories = ["command-line-utilities"]
keywords = ["wayland", "wlroots", "sway"]

[dependencies]
calloop = "0.10.6"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10.2"
hopcroft-karp = "0.2.1"
itertools = "0.12.1"
log = "0.4.21"
regex = "1.10.4"
ron = "0.8.1"
serde = { version = "1.0.201", features = ["derive"] }
snafu = "0.7.5"
toml = { version = "0.5.11", features = ["preserve_order"] }
wayland-client = { version = "=0.30.0", features = ["log", "calloop"] }
wayland-protocols-wlr = { version = "=0.1.0", features = ["client"] }
xdg = "2.5.2"
